--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" type="text/css" media="screen" href="resources/css/main.css">
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <nav class="container">
+            <div class="logo">
+                <img src="resources/images/logo-white.png" alt="Tortoiseshell Optics white logo">
+                <span>Tortoiseshell Optics</span>
+            </div>
+            <div class="menu">
+                <ul class="desk-view">
+                    <li>Services</li>
+                    <li>Product</li>
+                    <li>Contact</li>
+                </ul>
+                <ul class="mobile-view">
+                    <li>Menu</li>
+                </ul>
+            </div>
+        </nav>
+        <div class="flex-container container">
+            <div class="banner">
+                <h1>DON'T JUST LOOK, SEE.</h1>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
