--- a/index.html
+++ b/index.html
@@ -33,5 +33,40 @@
             </div>
         </div>
     </header>
+    <!-- SERVICES -->
+    <section class="section-flex">
+        <div class="service">
+            <img class="p-icon" src="resources/images/paper-icon.png" alt="paper icon">
+            <div>Comprehensive Exams</div>
+        </div>
+        <div class="service">
+            <img class="r-icon" src="resources/images/ruler-icon.png" alt="ruler icon">
+            <div>Custom Fittings</div>
+        </div>
+        <div class="service">
+            <img class="t-icon" src="resources/images/truck-icon.png" alt="truck image">
+            <div>Fast Delivery</div>
+        </div>
+    </section>
+    <!-- INFO -->
+    <section class="section-flex container">
+        <div class="info">
+            <div class="info-col">
+                PHILOSOPHY
+            </div>
+            <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+        </div>
+        <div class="info">
+            <div class="info-col">
+                APPOINTMENTS
+            </div>
+            <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
+    </section>
+    <!-- FOOTER -->
+    <footer class="container">
+        <img src="resources/images/logo-black.png" alt="Tortoiseshell Optics Black Logo">
+        <div>copyright Toirtoiseshell Optics</div>
+    </footer>
 </body>
 </html>
