--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- FOOTER -->
     <footer class="container">
         <img src="resources/images/logo-black.png" alt="Tortoiseshell Optics Black Logo">
-        <div>copyright Toirtoiseshell Optics</div>
+        <div>copyright Tortoiseshell Optics</div>
     </footer>
 </body>
 </html>
